gcc/testsuite/g++.dg/template/non-dependent15.C
@@ -1,0 +1,12 @@
+// PR c++/95468
+// { dg-do compile { target c++11 } }
+
+struct A {
+  template <int N>
+  static constexpr int condition() { return N; }
+};
+
+template <int> struct B {};
+
+template <class>
+using T = B<A::condition<int(1)>()>;
